mõned parandused